# pygame_shaders

./: LICENSE  README.md  main.py  prof.prof  pygame_shaders.py  pyproject.toml  screen_rect.py  setup.cfg  setup.py  shader_utils.py  texture.py
docs/: compute_shaders.rst  conf.py  index.rst  modules.rst  pygame_shaders.rst  quick_start.rst  screen_shaders.rst  surface_shaders.rst  writing_shaders.rst
docs/source/: conf.py  index.rst
examples/: 2shaders.py  PLEASE READ!.txt  helloworld.py  main.py
examples/bg_shader/: main.py
examples/bg_shader/shaders/: default_frag.txt  default_vertex.txt  fragment.txt  vertex.txt
examples/cellular automata/: frag.glsl  main.py
examples/compute/: compute.glsl  main.py
examples/conway/: conway.glsl  main.py
examples/custom_screen_shader/: main.py  screen_frag.glsl
examples/helloworld_shader/: default_frag.glsl  main.py  vertex.txt
examples/helloworld_shader/shaders/: default_frag.txt  vertex.txt
examples/raytracing/: frag.glsl  main.py
examples/rotation/: main.py  rotate.glsl
examples/shaders/: fragment.txt
examples/simple/: effect.glsl  main.py
examples/smoothlife/: frag.glsl  main.py
examples/water/: default_frag.glsl  main.py
examples/water/shaders/: fragment.txt
pygame_shaders/: __init__.py  pygame_shaders.py  screen_rect.py  shader_utils.py  texture.py
shaders/: fragment.txt
src/: pygame_shaders.py  screen_rect.py  shader_utils.py
src/pygame_shaders.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
