[project]
name = "pygame_shaders"
description = "a library to easily intergrate shaders into your new or existing pygame projects "
version = "1.0.6"
authors = [
    {name = "ScriptLine Studios", email = "scriptlinestudio@protonmail.com"}
]
dependencies = [
    "numpy",
    "pygame",
    "PyOpenGL",
]
[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"