[metadata]
name = pygame_shaders
version = 1.0.9
author = ScriptLine Studios
author_email = scriptlinestudios@protonmail.com
description = a library to easily integrate shaders into your new or existing pygame projects 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ScriptLineStudios/pygame_shaders
project_urls =
    Bug Tracker = https://github.com/ScriptLineStudios/pygame_shaders/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent